# computer-graphics-course

./: .gitignore  CMakeLists.txt  extract_sub_image.cpp
labs/lab1/: lab1.cpp
labs/lab2/: lab2.cpp
labs/lab3/: lab3.cpp
labs/lab4/: lab4.cpp
labs/lab5/: lab5.cpp
labs/lab6/: lab6.cpp  report.docx
labs/lab7/: lab7.cpp
pictures/: hello_sub_image.pgm
pictures/input_pictures/: .ppm  1 1 7 1.pgm  big_seeds.pgm  black_faces.pgm  bubbles.pgm  chair.pgm  chair_1.pgm  chair_2.pgm  circle1.pgm  circle2.pgm  colorful.ppm  eye.pgm  eye.ppm  faces.pgm  grad.pgm  gray.pgm  lines.pgm  moon.pgm  park_2.pgm  portal_tech.pgm  res_gray.pgm  resize.bat  road_woman.pgm  roses_2.pgm  seeds.pgm  silver_shining_test.ppm  small.pgm  spb_1.ppm  spb_2.ppm  spb_3.ppm  test_gray.ppm  woman_hat.pgm
pictures/input_pictures/7z_examples/: image_1.pgm  image_2.pgm  image_3.pgm  image_4.pgm
pictures/input_pictures/7z_examples/blurred/: image_1.pgm  image_2.pgm  image_3.pgm  image_4.pgm
pictures/input_pictures/7z_examples/noised/: image_1.pgm  image_2.pgm  image_3.pgm  image_4.pgm
pictures/input_pictures/bigger_copy/: chair_1.pgm  chair_2.pgm  circle1.pgm  circle2.pgm
pictures/input_pictures/skkv/: 1 2 1 1.pgm  1 2 2 1.pgm  1 2 2 2.2.pgm  1 2 8 1.pgm  1 3 1 1.pgm  1 3 1 2.2.pgm  1 3 2 0.pgm  1 3 2 1.pgm  1 3 2 2.2.pgm  1 3 8 1.pgm  1 3 8 2.2.pgm
pictures/input_pictures/small_copy/: chair_1.pgm  chair_2.pgm
pictures/source_images/: chair.pgm  convert.bat  new.pgm  old.pgm  park_1.pgm  roses_1.pgm  seeds_no_alpha.xcf  small_rectangle.ppm
practices/: 1_extract_sub_image.cpp
(+2 files in other folders)
