cmake_minimum_required(VERSION 3.16)
project(Graphics)

set(CMAKE_CXX_STANDARD 20)

add_executable(Graphics
        #        practices/1_extract_sub_image.cpp
        #        labs/lab1/lab1.cpp
        #        labs/lab2/lab2.cpp
        #        labs/lab2/denis/main.cpp
        #        labs/lab2/denis/pnm.cpp
        #        labs/lab2/denis/pnm.h
        #        labs/lab2/denis/space_converter.h
        #        labs/lab3/lab3.cpp

#                labs/lab3/denis/main.cpp
#                labs/lab3/denis/mnp.cpp
#                labs/lab3/denis/mnp.h
#
        labs/lab4/lab4.cpp

#                        labs/lab3/shaldin.cpp
        #        labs/lab4/lab4.cpp
        )