cmake_minimum_required(VERSION 3.16)
project(Graphics)

set(CMAKE_CXX_STANDARD 20)

add_executable(Graphics
        #        practices/1_extract_sub_image.cpp
        #        labs/lab1/lab1.cpp
        #        labs/lab2/lab2.cpp
        #        labs/lab3/lab3.cpp
        #        labs/lab4/lab4.cpp
#        labs/lab5/lab5.cpp
        labs/lab6/lab6.cpp

        )